# hermes

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT_INSTRUCTIONS.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  IMPLEMENTATION_ROADMAP.md  README.md  create_issues.py  docker-compose.yml  main.py  pyproject.toml  what i need.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  task_ticket.md
.github/workflows/: ci.yml
agents/: graph.py  nodes.py  state.py
backend/: main.py
backend/api/: deps.py
backend/api/v1/: router.py
backend/celery_worker/: celery_app.py  tasks.py
backend/core/: __init__.py  checkpointer.py  config.py  database.py  logging.py  metrics.py  qdrant.py  security.py  telemetry.py
backend/migrations/: env.py
backend/migrations/versions/: 0101ae028342_add_document_checksum.py  2cda3016267e_add_is_active_to_training_jobs.py  (+1 more)
backend/models/: __init__.py  audit.py  auth.py  base.py  chat.py  checkpoint.py  document.py  jobs.py
backend/repositories/: __init__.py  audit.py  auth.py  base.py  chat.py  document.py  jobs.py
backend/schemas/: __init__.py  auth.py  jobs.py
backend/services/: deployment.py  search.py
docs/: TICKET_BACKLOG.md
finetuning/: eval_config.json  evaluate.py  merge.py  preprocess.py  train.py
k8s/: backend.yaml  celery-worker.yaml  configs.yaml  databases.yaml  frontend.yaml  ingress.yaml
monitoring/prometheus/: prometheus.yml
rag/: __init__.py  chunking.py
tests/: conftest.py  test_agents.py  test_auth.py  test_config.py  test_deployment.py  test_evaluation.py  test_finetuning.py  test_rag.py  test_repositories.py  test_search.py  test_telemetry.py  test_tools.py
tests/load/: locustfile.py
tools/: chart_generator.py  python_executor.py  registry.py  report_generator.py  sql_compiler.py
uploads/: 30381d8a-2e10-4b64-a513-9545ed2051f4-list_test.txt  8b68a726-3b94-4429-b12a-0b64270b501c-test.txt  bae7e496-1585-4dc5-836d-e77bf3a15502-ingest.txt
(+20 files in other folders)
